tests/paczka1/fuzzy1/94378697.err
Error in line 1: x2z1lEvb A399 3,5
Error in line 3: x2z1lEvb S578 67,5
Error in line 15: A5kgU A95 3,2
Error in line 29: jJ9oaO S328 30,1
Error in line 24: A95 A399 57,1
Error in line 33: A95 A95 46,6
